# crazyflie_ecust_control

./: README.md  meno
crazyflie_ecust_control/: CMakeLists.txt  package.xml
hover_vicon/: CMakeLists.txt  package.xml
hover_vicon/launch/: four_control_four.launch  four_hover.launch  hover_vicon.launch  leader_follower.launch  multi_hover.launch  multi_waypoint.launch  multi_waypoint_vicon.launch  my_leader_follower.launch  my_multi_hover.launch  my_multi_waypoint.launch  my_waypoint.launch  one_control_four.launch  one_control_six.launch  one_control_three.launch  six_hover.launch  two_control_four_1234.launch  two_control_four_1256.launch  two_control_four_3456.launch  two_hover.launch  waypoint_vicon.launch
hover_vicon/src/: follower.py  follower1.py  leader.py  waypoint1.py
leader_follower/: CMakeLists.txt  package.xml
leader_follower/launch/: centralize.launch  centralize.rviz  centralize1.launch  centralize1.rviz  centralize6.launch  leader_follower.launch  leader_follower.rviz  lf2.launch  manager.launch  my_leader_follower.launch  single.launch  stickTest.launch  stick_test.rviz
leader_follower/src/: JoyGoal.py  StickGoal.py  cf1.py  circularFollower.py  follower.py  follower1.py  followerManager.py  leader.py  leaderManager.py  leader_waypoint.py  manager.py  normal.py  pose.py
my_cpp/: CMakeLists.txt  package.xml
my_cpp/include/: LogUtils.h
my_cpp/src/: LogUtils.cpp
my_crazyflie_controller/: CMakeLists.txt  package.xml
my_crazyflie_controller/launch/: my_cf2.launch  my_cf22.launch
my_crazyflie_controller/msg/: IDPose.msg  LeaderController.msg  ThreeAgentMsg.msg
my_crazyflie_controller/src/: ControlCenter.cpp  ControlCenter.hpp  CsvHelper.hpp  GoalCenter.cpp  GoalCenter.hpp  LogUtils.hpp  SingleAgent.cpp  SingleAgent.hpp  center.cpp  center.hpp  center2.hpp  common.hpp  controller.cpp  controller2.cpp  followerController.py  leaderController.py  myController.py
my_crazyflie_controller/srv/: AgentU.srv  MyTopologies.srv
my_crazyflie_driver/: CMakeLists.txt  package.xml
my_crazyflie_driver/launch/: my_crazyflie_add.launch
my_crazyflie_driver/src/: my_crazyflie_add.cpp
simple_control/: CMakeLists.txt  package.xml
simple_control/launch/: simple_control.launch
waypoint_vicon/: CMakeLists.txt  package.xml
waypoint_vicon/launch/: multi_waypoint_vicon.launch  my_multi_waypoint.launch  my_waypoint.launch  one_loco.launch  six_waypoint_vicon.launch  three_debug.launch  three_waypoint_vicon.launch  two_circle.launch  two_loco.launch  waypoint_vicon.launch
waypoint_vicon/src/: generate_waypoint.py  gw1.py  gw2.py  gw3.py  gw4.py  gw5.py  gw6.py  loco_gw.py  time_based_waypoint.py  waypoint2.py
