<?xml version="1.0"?>
<package>
  <name>crazyflie_ecust_control</name>
  <version>0.0.0</version>
  <description>The crazyflie_ecust package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hgkdzbf6@qq.com">bf z</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/crazyflie_ecust</url> -->

  <!-- <build_depend>hover_vicon</build_depend> 
  <build_depend>waypoint_vicon</build_depend>
  <build_depend>leader_follower</build_depend>
  <build_depend>my_crazyflie_controller</build_depend>
  <build_depend>my_crazyflie_driver</build_depend>
  <build_depend>my_run</build_depend>
  <build_depend>simple_control</build_depend>
  <build_depend>crazyflie_ros</build_depend> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <run_depend>hover_vicon</run_depend> 
  <run_depend>waypoint_vicon</run_depend>
  <run_depend>leader_follower</run_depend>
  <run_depend>my_crazyflie_controller</run_depend>
  <run_depend>my_crazyflie_driver</run_depend>
  <run_depend>my_run</run_depend>
  <run_depend>simple_control</run_depend>
  <run_depend>crazyflie_ros</run_depend>
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
